--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -21,10 +21,10 @@
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_request"
+            android:id="@+id/btn_action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="request permission" />
+            android:text="request action" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_update"
